fixed problem with images stretching in feed

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -950,7 +950,6 @@ div#product-list, .product-list
     display: block
     img
       max-width: 452px
-      max-height: 587px
 
 //
 // Product medium - shop
